# py_igsdb_base_data

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/py_igsdb_base_data/: entity.py  integrated_spectral_averages.py  material.py  optical.py  product.py  standard.py  warnings.py
src/py_igsdb_optical_data/: optical.py
tests/: test_optical.py  test_physical_properties.py  test_product.py  utils.py
tests/data/: sample_wavelength_data.json  valid_monolithic_1.json  valid_summary_values.json
