[metadata]
name = py_igsdb_base_data
version = 0.0.44
author = LBNL-ETA
author_email = rdmitchell@lbl.gov
description = A simple library to provide dataclasses and interfaces for IGSDB-related data and operations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LBNL-ETA/py_igsdb_base_data
project_urls =
    Bug Tracker = https://github.com/LBNL-ETA/py_igsdb_base_data/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = dataclasses-json

[options.packages.find]
where = src
